feat: Add new Spring Boot module `redisson-hyperloglog-visit` to track unique visits using Redisson's HyperLogLog.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>redisson-cache-consistency</module>
+        <module>redisson-hyperloglog-visit</module>
     </modules>
 
     <properties>
