feat: Configure Redisson to connect to Redis via `host.docker.internal` and remove redundant `spring.redis` host/port properties.

--- a/redisson-hyperloglog-visit/src/main/resources/application.yml
+++ b/redisson-hyperloglog-visit/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
     redisson:
       config: |
         singleServerConfig:
-          address: "redis://127.0.0.1:6379"
+          address: "redis://host.docker.internal:6379"
