--- a/redisson-cache-consistency/src/main/resources/application.yml
+++ b/redisson-cache-consistency/src/main/resources/application.yml
@@ -2,11 +2,9 @@ spring:
   application:
     name: redisson-cache-consistency
   redis:
-    host: 127.0.0.1
-    port: 6379
     redisson:
       config: |
         singleServerConfig:
-          address: "redis://127.0.0.1:6379"
+          address: "redis://host.docker.internal:6379"
 server:
   port: 8080
